--- a/src/Components/Ask/Ask.module.css
+++ b/src/Components/Ask/Ask.module.css
@@ -80,9 +80,11 @@
      gap: 150px;
 } */
 .accordian {
-    margin-bottom: 10px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
+  margin-bottom: 10px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  width: 768px;
+  align-self: center;
   }
   
   .accordianItem {
