--- a/src/Components/Feature/feature.module.css
+++ b/src/Components/Feature/feature.module.css
@@ -1,5 +1,5 @@
 .biggerDiv {
-    width: auto;
+    width: 100%;
     gap: 24px;
     background-size: 100% 100%;
     display: flex;
@@ -12,72 +12,88 @@
 }
 
 .About{
-    width: 100%;
     gap: 24px;
     background-size: 100% 100%;
     display: flex;
     text-align: center;
-    padding: 90px 120px 30px 120px;
+    padding: 30px 120px;
     justify-content: center;
     background-color: black;
     flex-direction: column;
     align-items: center;
+    /* width: 100%; */
+    text-align: center;
+    
 }
-
-.bread{
-    width: 70%;
+.bread {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start; 
     gap: 40px;
-    display: block;
-    z-index: 3;
-    margin: 0;
-
+    width: auto;
+    padding: 75px 150px;
 }
 
+.bread .crumb {
+    flex: 60%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    width: 450px;
+}
 
-.bread h1{
-    font-weight: 600;
-    font-size: 80px;
+.bread .crumb h1 {
+    font-weight: 700;
+    font-size: 72px;
     line-height: 79.2px;
     align-items: center;
     color: #ffffff;
     width: auto;
     margin: 0;
     font-family: "BRFirma";
-    margin-right: auto;
-    margin-left: auto;
-    letter-spacing: -0.4px;
+    text-align: left;
+}
+.bread .img img{
+    width: 100%;
+    height: 423px;
 }
 
-.bread p{
+.bread p {
     font-weight: 400;
-    font-size: 20px;
-    line-height: 30px;
+    font-size: 18px;
+    line-height: 28px;
     letter-spacing: -0.4px;
     align-items: center;
     color: #dedfe3;
-    padding: 3%;
     width: auto;
     font-family: "BRFirma";
-    
+    text-align: left;
+}
+
+.bread .img {
+    flex: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 576px; 
+    height: 423px;
 }
 
 .bread button{
-    /* Width: 156px;
-    height: 56px; */
-    border-radius: 1000px;
-    padding: 13px 48px ;
+    Width: 245px;
+    height: 56px;
+    border-radius: 1200px;
+    /* padding: 40px 48px; */
     gap: 8px;
     color: #ffffff;
-    background-color:  #D2042D;
+    background-color: #D2042D;
     border: none;
     font-size: 16px;
     text-align: center;
 }
-
-
 .bread button:hover {
-    background-color: #D2042D;;
-}
+    background-color: #D2042D;
+} 
 
 .icon {
     width: 20px;
@@ -86,48 +102,30 @@
 }
 
 .red{
-    color:#D2042D;
+    color: #B3B3B3;
 }
 
 .img1 {
     position: absolute;
     top: 25%;
-    left: 5%;
-    display: inline-block;
-    animation: bounce 2s infinite
+    left: 10%;
 }
 
 .img2 {
     position: absolute;
-    right: 5%;
+    right: 10%;
     top: 25%;
-    display: inline-block;
-    animation: bounce 2s infinite
 }
 
 .img3 {
     position: absolute;
-    bottom: 0.5%;
+    bottom: 10%;
     left: 10%;
-    display: inline-block;
-    animation: bounce 2s infinite
 }
 
 .dash{
-    z-index: 5;
-   
+    /* position: absolute; */
+    /* top: 60%; */
+    left: 15%;
+    bottom: 0;
 }
-
-@keyframes bounce {
-    0%, 20%, 50%, 80%, 100% {
-      transform: translateY(0px);
-    }
-    10% {
-      transform: translateY(-20px);
-    }
-    10% {
-      transform: translateY(-20px);
-    }
-  }
-  
-
