--- a/src/Components/Start/Start.module.css
+++ b/src/Components/Start/Start.module.css
@@ -1,15 +1,17 @@
 .start{
-    width: 100%;
+    width: 85%;
     gap: 24px;
     display: flex;
     text-align: center;
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    overflow-x: hidden;
+    margin-left: 100px;
 }
 
 .text {
-    width: 1320px;
+    width: 100%;
     align-self: center;
     margin-left: auto;
     margin-right: auto;
@@ -56,6 +58,5 @@
     font-size: 16px;
     text-align: center;
     width: 25%;
-    margin-left: 430px;
-    align-items: center;
+    align-self: center;
 }
