--- a/src/Components/Team/Team.module.css
+++ b/src/Components/Team/Team.module.css
@@ -1,16 +1,43 @@
-.team{
+.team {
     width: 100%;
     display: flex;
     text-align: center;
-    
+    align-items: center;
     flex-direction: column;
-    
-    height: 899px;
+    overflow-x: hidden;
+    height: 100%;
+    position: relative; 
+    margin-bottom: 80px;
+    overflow-y: hidden;
 }
 
-.team h1{
+.team h1 {
     width: 100%;
     height: 42px;
     font-size: 56px;
     font-weight: 700;
+}
+
+.team img {
+    width: 75%;
+    max-width: 1026.23px;
+    height: auto;
+    max-height: 451px;
+    padding-top: 130px;
+    position: relative;
+    z-index: 2; 
+}
+
+/* Ellipse behind the image */
+.ellipse {
+    position: absolute;
+    top: 99%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 1227px;
+    height: 17px;
+    background-color: rgba(242, 180, 192, 0.7);
+    border-radius: 50%;
+    z-index: 1;
+    
 }
