--- a/src/Components/Usecase/Usecase.module.css
+++ b/src/Components/Usecase/Usecase.module.css
@@ -1,5 +1,5 @@
 .biggerDiv {
-    width: auto;
+    width: 100%;
     gap: 24px;
     background-size: 100% 100%;
     display: flex;
@@ -17,7 +17,7 @@
     background-size: 100% 100%;
     display: flex;
     text-align: center;
-    padding: 90px 120px 30px 120px;
+    padding: 90px 120px;
     justify-content: center;
     background-color: black;
     flex-direction: column;
@@ -35,27 +35,24 @@
 
 
 .bread h1{
-    font-weight: 600;
-    font-size: 80px;
+    font-weight: 700;
+    font-size: 72px;
     line-height: 79.2px;
     align-items: center;
     color: #ffffff;
     width: auto;
     margin: 0;
     font-family: "BRFirma";
-    margin-right: auto;
-    margin-left: auto;
-    letter-spacing: -0.4px;
 }
 
 .bread p{
     font-weight: 400;
-    font-size: 20px;
-    line-height: 30px;
+    font-size: 18px;
+    line-height: 28px;
     letter-spacing: -0.4px;
     align-items: center;
     color: #dedfe3;
-    padding: 3%;
+    padding: 8%;
     width: auto;
     font-family: "BRFirma";
     
@@ -73,10 +70,8 @@
     font-size: 16px;
     text-align: center;
 }
-
-
 .bread button:hover {
-    background-color: #D2042D;;
+    background-color: #D2042D;
 }
 
 .icon {
@@ -86,48 +81,30 @@
 }
 
 .red{
-    color:#D2042D;
+    color: #B3B3B3;
 }
 
 .img1 {
     position: absolute;
     top: 25%;
-    left: 5%;
-    display: inline-block;
-    animation: bounce 2s infinite
+    left: 10%;
 }
 
 .img2 {
     position: absolute;
-    right: 5%;
+    right: 10%;
     top: 25%;
-    display: inline-block;
-    animation: bounce 2s infinite
 }
 
 .img3 {
     position: absolute;
-    bottom: 0.5%;
+    bottom: 10%;
     left: 10%;
-    display: inline-block;
-    animation: bounce 2s infinite
 }
 
 .dash{
-    z-index: 5;
-   
+    /* position: absolute; */
+    /* top: 60%; */
+    left: 15%;
+    bottom: 0;
 }
-
-@keyframes bounce {
-    0%, 20%, 50%, 80%, 100% {
-      transform: translateY(0px);
-    }
-    10% {
-      transform: translateY(-20px);
-    }
-    10% {
-      transform: translateY(-20px);
-    }
-  }
-  
-
